# COMP-371-Project

./: CMakeLists.txt  README.md
assets/shaders/: scene_fragment.glsl  scene_vertex.glsl  skybox.frag  skybox.vert
src/: A2.cpp  main.cpp  shaders.h
